--- a/GamePortal/frontend/angular.json
+++ b/GamePortal/frontend/angular.json
@@ -96,9 +96,21 @@
                             "src/assets"
                         ],
                         "styles": [
+
+                            "node_modules/angular-bootstrap-md/scss/mdb-free.scss",
+
+                            "node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss",
+                            "node_modules/@fortawesome/fontawesome-free/scss/solid.scss",
+                            "node_modules/@fortawesome/fontawesome-free/scss/regular.scss",
+                            "node_modules/@fortawesome/fontawesome-free/scss/brands.scss",
+                            "node_modules/angular-bootstrap-md/assets/scss/bootstrap/bootstrap.scss",
+                            "node_modules/angular-bootstrap-md/assets/scss/mdb.scss",
+                            "node_modules/animate.css/animate.css",
                             "src/styles.scss"
                         ],
-                        "scripts": ["src/app/game2/game2.js", "src/floppy.js"]
+                        "scripts": ["src/app/game2/game2.js", "src/floppy.js", "node_modules/chart.js/dist/Chart.js",
+                            "node_modules/hammerjs/hammer.min.js"
+                        ]
                     }
                 },
                 "lint": {
@@ -110,7 +122,7 @@
                             "e2e/tsconfig.json"
                         ],
                         "exclude": [
-                            "**/node_modules/**"
+                            "**/node_modules/**", "e2e"
                         ]
                     }
                 },
