--- a/GamePortal/frontend/e2e/tsconfig.json
+++ b/GamePortal/frontend/e2e/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "extends": "../tsconfig.json",
+  "include": ["node_modules/angular-bootstrap-md/**/*.ts",  "src/**/*.ts"],
   "compilerOptions": {
     "outDir": "../out-tsc/e2e",
     "module": "commonjs",
@@ -10,4 +11,5 @@
       "node"
     ]
   }
+
 }
