--- a/GamePortal/frontend/package.json
+++ b/GamePortal/frontend/package.json
@@ -20,7 +20,19 @@
         "@angular/platform-browser": "~8.2.8",
         "@angular/platform-browser-dynamic": "~8.2.8",
         "@angular/router": "~8.2.8",
+        "@fortawesome/fontawesome-free": "^5.11.2",
+        "@types/chart.js": "^2.8.7",
+        "@types/jest": "^24.0.18",
+        "@types/mocha": "^5.2.7",
+        "angular-bootstrap-md": "^8.3.1",
+        "animate.css": "^3.7.2",
+        "bootstrap": "^3.3.7",
+        "chart.js": "^2.5.0",
+        "hammerjs": "^2.0.8",
+        "jquery": "^3.4.1",
+        "p5": "^0.9.0",
         "rxjs": "~6.4.0",
+        "tether": "^1.4.7",
         "tslib": "^1.10.0",
         "zone.js": "~0.9.1"
     },
