--- a/GamePortal/frontend/tsconfig.app.json
+++ b/GamePortal/frontend/tsconfig.app.json
@@ -9,10 +9,11 @@
     "src/polyfills.ts"
   ],
   "include": [
-    "src/**/*.ts"
+    "src/**/*.ts","**/*.ts", "../node_modules/angular-bootstrap-md/index.ts"
   ],
   "exclude": [
     "src/test.ts",
-    "src/**/*.spec.ts"
+    "src/**/*.spec.ts",
+    "e2e"
   ]
 }
