--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,10 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "~8.2.8",
+        "@angular/animations": "8.2.11",
         "@angular/common": "~8.2.8",
         "@angular/compiler": "~8.2.8",
-        "@angular/core": "~8.2.8",
+        "@angular/core": "^8.2.11",
         "@angular/forms": "~8.2.8",
         "@angular/platform-browser": "~8.2.8",
         "@angular/platform-browser-dynamic": "~8.2.8",
@@ -26,13 +26,22 @@
         "@types/mocha": "^5.2.7",
         "angular-bootstrap-md": "^8.3.1",
         "animate.css": "^3.7.2",
+        "body-parser": "^1.19.0",
         "bootstrap": "^3.3.7",
+        "bulma": "^0.7.5",
         "chart.js": "^2.5.0",
+        "express": "^4.17.1",
         "hammerjs": "^2.0.8",
         "jquery": "^3.4.1",
         "login": "^0.8.0",
+        "ng2-toastr": "^4.1.2",
+        "ng6-toastr-notifications": "^1.0.4",
+        "ngx-toastr": "^11.1.2",
         "p5": "^0.9.0",
-        "rxjs": "~6.4.0",
+        "pusher": "^3.0.0",
+        "pusher-js": "^5.0.2",
+        "rxjs": "^6.4.0",
+        "rxjs-compat": "^6.5.3",
         "tether": "^1.4.7",
         "tslib": "^1.10.0",
         "zone.js": "~0.9.1"
