--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -69,6 +69,14 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>5.4.6.Final</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>5.1.5.RELEASE</version>
+			<scope>test</scope>
+		</dependency>
+
 
 	</dependencies>
 </project>
